--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,19 @@
 fastapi==0.114.1
 gunicorn==20.1.0
 uvicorn==0.30.6
+Werkzeug==3.0.4
+Jinja2==3.1.4
+itsdangerous==2.2.0
+click==8.1.7
+beautifulsoup4==4.12.3
+lxml==5.3.0
+requests==2.32.3
+selenium==4.11.2
+webdriver-manager==4.0.2
+matrix-nio==0.18.5
+gunicorn==20.1.0
+playwright==1.46.0
+greenlet==3.0.3
+selenium==4.11.2
+webdriver-manager==4.0.2
 
